# cogno-gateway

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_gateway/: __init__.py  chunker.py  cloud.py  evolution.py  factory.py  options.py  ports.py  telegram.py  types.py  web.py
docs/: HOST_INTEGRATION.md
examples/: host_choices.py  host_min.py
tests/: conftest.py
tests/integration/: test_http_roundtrip.py
tests/unit/: test_chunker.py  test_cloud.py  test_evolution.py  test_factory.py  test_options.py  test_telegram.py  test_web.py
