[project]
name = "cogno-gateway"
version = "0.1.0"
description = "Messaging transport edge for the Cogno cognitive pipeline — Telegram / WhatsApp (Evolution) / Web channel adapters behind a normalized, content-typed message model"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["telegram", "whatsapp", "evolution-api", "webhook", "chat", "gateway", "messaging", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# The channel adapters talk to provider HTTP APIs over httpx; the Web channel
# needs nothing extra. No web framework — the host owns the HTTP endpoint.
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-gateway"
Repository = "https://github.com/sudoers-ai/cogno-gateway"
Issues = "https://github.com/sudoers-ai/cogno-gateway/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_gateway*"]

[tool.setuptools.package-data]
cogno_gateway = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_gateway"]
warn_unused_ignores = true
